# backend-in-rust

./: Cargo.toml  README.md  README.md.bak
01_basic_server/: README.md
01_basic_server/src/: handler.rs  lib.rs  router.rs
02_auth_jwt/: .gitignore  Cargo.toml  config.yaml
02_auth_jwt/entity/: Cargo.toml
02_auth_jwt/entity/src/: user_information.rs
02_auth_jwt/migration/src/: m20220101_000001_create_table.rs
02_auth_jwt/src/: app.rs  config.rs  error.rs  jwt.rs  lib.rs  main.rs  routes.rs  shared.rs  users.rs
02_auth_jwt/src/handler/: mod.rs  protected.rs  root.rs  user.rs
auth_basic_jwt/: .env.example  Cargo.toml  Dockerfile  compose.yaml
auth_basic_jwt/app/: Cargo.toml
auth_basic_jwt/app/src/: config.rs  lib.rs
auth_basic_jwt/entity/src/: mod.rs  user_information.rs
auth_basic_jwt/migration/src/: m20220101_000001_create_table.rs
auth_basic_jwt/src/: main.rs
auth_jwt/: Cargo.toml
auth_jwt/src/: app.rs  handler.rs  lib.rs  main.rs  routes.rs  users.rs
basic_server/: Cargo.toml
basic_server/src/: app.rs  lib.rs  main.rs  router.rs
