[package]
name = "auth_jwt"
description = "JWT authorization strategy"
version = "0.1.0"
edition = "2021"

[lib]
path = "./src/lib.rs"
name = "pkg"

[dependencies]
axum = "0.7.5"
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
sea-orm = { version = "1.0.0-rc.5", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
serde_yml = "0.0.12"
anyhow = "1.0.87"
uuid = { version = "1.10.0", features = ["v4"] }
